add details on README